@@ -71,6 +71,15 @@ Bridging
    ast_bridge_snapshot_update structure as it's data.  It contains
    the last snapshot and the new one.
 
+------------------------------------------------------------------------------
+--- Functionality changes from Asterisk 16.1.0 to Asterisk 16.2.0 ------------
+------------------------------------------------------------------------------
+
+res_pjsip
+------------------
+ * Added "send_contact_status_on_update_registration" global configuration option
+   to enable sending AMI ContactStatus event when a device refreshes its registration.
+
 Features
 ------------------
  * Before Asterisk 12, when using the automon or automixmon features defined
